# better-drinking-bird

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: act101-stg-scan.yml
docs/: 01_LINKED_IN.md
docs/plans/: 2026-01-28-install-scope-manifest.md  2026-01-28-llm-git-history-classifier.md  2026-01-28-pause-resume-config.md  2026-03-16-permissions-check.md
src/drinkingbird/: __init__.py  cli.py  config.py  doctor.py  manifest.py  mode.py  pause.py  supervisor.py  tracing.py
src/drinkingbird/adapters/: __init__.py  base.py  claude_code.py  cline.py  copilot.py  cursor.py  kilo_code.py  stdin.py  windsurf.py
src/drinkingbird/config/: __init__.py  defaults.py  loader.py  models.py
src/drinkingbird/hooks/: __init__.py  base.py  pre_compact.py  pre_tool.py  stop.py  tool_failure.py
src/drinkingbird/llm/: __init__.py  anthropic.py  azure.py  base.py  ollama.py  openai.py
src/drinkingbird/safety/: __init__.py  blocklist.py  command_classifier.py  patterns.py
tests/: __init__.py  test_adapters.py  test_blocklist.py  test_command_classifier.py  test_config.py  test_doctor.py  test_hooks.py  test_llm.py  test_manifest.py  test_mode.py  test_pause.py  test_safety.py
